ユーザ機能、ユーザ拡張、キーワード追加など

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,10 @@
             <a class="nav-link" href="{% url 'searcht' %}">Tags</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Sign In</a>
+            <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
           </li>
         </ul>
       </div>
